# discord-bot

./: .gitignore  Cargo.toml  README.md
migrations/20170318154217_create_users/: up.sql
migrations/20170318154236_create_greetings/: down.sql  up.sql
migrations/20170318154239_create_aliases/: up.sql
migrations/20170318154801_create_effects/: down.sql  up.sql
migrations/20170516195739_create_streamers/: down.sql  up.sql
migrations/20170517205943_add_streamers_last_online/: down.sql
src/: bot.rs  logger.rs  main.rs  text_util.rs  util.rs
src/action/: mod.rs
src/action/alias/: add.rs  list.rs  mod.rs  remove.rs
src/action/ban/: add.rs  list.rs  remove.rs
src/action/debug/: log.rs  mod.rs
src/action/effect/: delete.rs  list.rs  mod.rs  play.rs  rename.rs  silence.rs
src/action/greeting/: add.rs  list.rs  remove.rs
src/action/message/: delete.rs  (+2 more)
src/actions/: add_alias.rs  add_ban.rs  add_greeting.rs  delete_effect.rs  delete_message.rs  download_flac_file.rs  leave_server_voice.rs  list_aliases.rs  list_bans.rs  list_effects.rs  list_greetings.rs  mod.rs  play_effects.rs  reload_server_configuration.rs  remove_alias.rs  remove_ban.rs  remove_greeting.rs  rename_effect.rs  send_message.rs  silence_active_effects.rs
src/audio/: mixer.rs  mixer_list.rs  mixer_source.rs  mod.rs
src/command/: alias.rs  aliases.rs  ban.rs  bans.rs  delete.rs  delete_effect.rs  greeting.rs  greetings.rs  help.rs  ip.rs  leave.rs  mod.rs  not_found.rs  pin.rs  play.rs  play_effect.rs  record.rs  reload.rs  rename.rs  rename_effect.rs  silence.rs  sounds.rs  streamer.rs  streamers.rs  uploader.rs  uploaders.rs
src/core/: channel.rs  event.rs  handle.rs  member.rs  message.rs  mod.rs  server.rs  user.rs
src/db/: mod.rs  models.rs
src/effect/: effect.rs  manage.rs  mod.rs  stats.rs
src/effects/: mod.rs
src/server/: alias.rs  ban.rs  channel.rs  config.rs  effect.rs  greeting.rs  member.rs  mod.rs  uploader.rs  voice.rs
src/upload/: mod.rs
(+67 files in other folders)
