[package]
name = "discord-bot"
version = "0.1.0"
authors = ["Ivo Wetzel <ivo.wetzel@googlemail.com>"]

[dependencies]
discord = { git = "https://github.com/bonsaiden/discord-rs.git", rev = "master" }
# discord = { path = "../discord-rs", version = "0.7.0" }
flac = { git = "https://github.com/bonsaiden/flac.git", rev = "master" }
vorbis-enc = { git="https://github.com/BonsaiDen/vorbis-enc.git", rev = "master" }
edit-distance = "1.0.0"
diesel = { version = "0.11.0", features = ["sqlite"] }
diesel_codegen = { version = "0.11.0", features = ["sqlite"] }
clock_ticks = "*"
dotenv = "*"
chrono = "0.3"
hyper = "0.9"
rand = "*"
log = "*"
rayon = "*"
serde = "1.0.0"
serde_derive = "1.0.0"
serde_json = "1.0.0"
app_dirs = "^1.1.1"
clippy = { version = "*", optional = true }

[features]
lint = ["clippy"]

